--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,7 +28,7 @@ jobs:
         
     - name: Run tests
       run: |
-        pytest tests/ --cov=graphscii --cov-report=xml
+        pytest tests/ --cov=phart --cov-report=xml
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
