--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = graphscii
+name = phart
 author = Scott VR
-description = ASCII art graph visualization in pure Python
+description = Python Hierarchical ASCII Representation Tool
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/scottvr/graphscii
+url = https://github.com/scottvr/phart
 project_urls =
-    Bug Tracker = https://github.com/scottvr/graphscii/issues
+    Bug Tracker = https://github.com/scottvr/phart/issues
