--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ license = "MIT"
 authors = [
     { name = "Scott VR", email = "scottvr@gmail.com" }
 ]
+dynamic = ["dependencies", "optional-dependencies"]
+
 dependencies = [
     "networkx>=2.6.0",
 ]
@@ -37,10 +39,10 @@ developer = [
 doc = [
 ]
 example = [
+    'pydot>=3.0.1',
 ]
 extra = [
     'pygraphviz>=1.14',
-    'pydot>=3.0.1',
 ]
 test = [
     'pytest>=7.2',
