--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,9 +49,11 @@ test = [
 ]
 
 [tool.black]
-line-length = 100
+line-length = 88
 target-version = ['py38']
 include = '\.pyi?$'
+preview = true
+force-multiline-basics = true
 
 [tool.isort]
 profile = "black"
