--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,9 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 
+[tool.flake8]
+max-line-length = 120
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
