more linter configs

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,6 @@ long_description_content_type = text/markdown
 url = https://github.com/scottvr/phart
 project_urls =
     Bug Tracker = https://github.com/scottvr/phart/issues
+
+[isort]
+profile = black
