--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "phart"
-version = "0.1.68"
+version = "0.1.7"
 description = "Python Hierarchical ASCII Representation Tool - Pure Python graph visualization in ASCII, no external dependencies* (*except NetworkX)"
 readme = "README.md"
 license = "MIT"
@@ -49,6 +49,9 @@ test = [
     'pytest>=7.2',
     'pytest-cov>=4.0',
 ]
+
+[project.scripts]
+phart = "phart.cli:main"
 
 [tool.black]
 line-length = 79
