--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "phart"
-version = "1.0.2"
+version = "1.0.3"
 description = "Python Hierarchical ASCII Representation Tool - Pure Python graph visualization in ASCII, no external dependencies* (*except NetworkX)"
 readme = "README.md"
 license = "MIT"
@@ -12,7 +12,7 @@ authors = [
     { name = "Scott VR", email = "scottvr@gmail.com" }
 ]
 dependencies = [
-    "networkx>=2.6.0",
+    "networkx==3.4.2",
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
